feat: add id to target config
