# pkg/api/controllers/targetconfig/add.go
@@ -7,10 +7,9 @@ import (
 	"fmt"
 	"net/http"
 
-	"github.com/daytonaio/daytona/internal/util/apiclient/conversion"
 	"github.com/daytonaio/daytona/pkg/api/util"
 	"github.com/daytonaio/daytona/pkg/server"
-	"github.com/daytonaio/daytona/pkg/server/targetconfigs/dto"
+	"github.com/daytonaio/daytona/pkg/services"
 	"github.com/gin-gonic/gin"
 )
 
@@ -19,13 +18,13 @@ import (
 //	@Tags			target-config
 //	@Summary		Add a target config
 //	@Description	Add a target config
-//	@Param			targetConfig	body		CreateTargetConfigDTO	true	"Target config to add"
+//	@Param			targetConfig	body		AddTargetConfigDTO	true	"Target config to add"
 //	@Success		200				{object}	TargetConfig
 //	@Router			/target-config [put]
 //
 //	@id				AddTargetConfig
 func AddTargetConfig(ctx *gin.Context) {
-	var req dto.CreateTargetConfigDTO
+	var req services.AddTargetConfigDTO
 	err := ctx.BindJSON(&req)
 	if err != nil {
 		ctx.AbortWithError(http.StatusBadRequest, fmt.Errorf("invalid request body: %w", err))
@@ -34,9 +33,7 @@ func AddTargetConfig(ctx *gin.Context) {
 
 	server := server.GetInstance(nil)
 
-	targetConfig := conversion.ToTargetConfig(req)
-
-	err = server.TargetConfigService.Add(targetConfig)
+	targetConfig, err := server.TargetConfigService.Add(req)
 	if err != nil {
 		ctx.AbortWithError(http.StatusInternalServerError, fmt.Errorf("failed to set target config: %w", err))
 		return
