# pkg/server/targets/set-default.go
@@ -41,10 +41,10 @@ func (s *TargetService) SetDefault(ctx context.Context, id string) error {
 
 func TargetDtoToTarget(targetDto dto.TargetDTO) *models.Target {
 	return &models.Target{
-		Id:               targetDto.Id,
-		Name:             targetDto.Name,
-		TargetConfigName: targetDto.TargetConfigName,
-		TargetConfig:     targetDto.TargetConfig,
-		IsDefault:        targetDto.IsDefault,
+		Id:             targetDto.Id,
+		Name:           targetDto.Name,
+		TargetConfigId: targetDto.TargetConfigId,
+		TargetConfig:   targetDto.TargetConfig,
+		IsDefault:      targetDto.IsDefault,
 	}
 }
